# ai-coding-agent-v2

./: .agentforge.sqlite  .gitignore  README.md  constraints.txt  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: ImplimentationPlan.md  README.md  RFC.md  task_management_system.json
src/agentforge/: __init__.py  agents.py  agents_base.py  cli.py  config.py  database.py  guardrails.py  logging.py  models.py  offline.py  orchestrator.py  tools.py
src/agentforge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/agentforge/agents/: __init__.py  base.py  codegen.py  documentation.py  qa.py  requirements.py  testing.py
src/agentforge/observability/: __init__.py  logging.py  tracing.py
src/agentforge/orchestration/: __init__.py  handoffs.py  parallel.py  pipeline.py
src/agentforge/persistence/: __init__.py  database.py  models.py
src/agentforge/schema/: spec_schema.json
src/agentforge/tools/: __init__.py  documentation.py  file_ops.py  git_ops.py  openai_api.py  quality.py  research.py  testing.py  validators.py
src/ai_coding_agent/: __init__.py  __main__.py  cli.py  config.py  context.py  plan.py
src/ai_coding_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ai_coding_agent/agents/: __init__.py  pipeline.py
src/ai_coding_agent/tools/: filesystem.py
src/aiosqlite/: __init__.py
src/pydantic/: __init__.py
tests/: conftest.py  test_pipeline.py
tests/e2e/: test_handoff_execution.py
tests/fixtures/: min_spec.json
tests/integration/: test_pipeline.py  test_project_plan_pipeline.py
tests/tests_data/: sample_spec.json
tests/unit/: test_requirements_agent.py
workspace/: PROVENANCE.md  README.md  RUNBOOK.md
workspace/artifacts/: requirements_summary.md
workspace/logs/: events.jsonl
workspace/requirements/: acceptance_criteria.md  api_spec.md  backup_strategy.md  data_model.md  export_formats.md  implementation_plan.md  open_questions.md  project_overview.md  srs.md  ui_flows.md
workspace/task_management_system/: README.md
workspace/task_management_system/projects/: admin.py  forms.py  models.py  urls.py  views.py
(+10 files in other folders)
