[project]
name = "agentforge"
version = "0.1.0"
description = "AgentForge multi-agent orchestration system"
authors = [{ name = "Agent", email = "agent@example.com" }]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
  "pydantic>=2.9.0",
  "aiosqlite>=0.20.0",
  "click>=8.1.7",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "black>=24.8.0",
  "mypy>=1.11.0",
  "bandit[toml]>=1.7.9",
  "safety>=3.2.0",
  "GitPython>=3.1.43",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

