[project]
name = "agentforge"
version = "0.1.0"
description = "AgentForge multi-agent orchestration pipeline."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "AgentForge Team" }]
dependencies = [
    "openai-agents",
    "jsonschema>=4.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "coverage>=7.0",
    "ruff>=0.5.0",
    "mypy>=1.8.0",
    "bandit>=1.7.5",
    "safety>=3.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/agentforge"]

[project.scripts]
agentforge = "agentforge.cli:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
